--- a/app.css
+++ b/app.css
@@ -1,5 +1,7 @@
 
 @import url("css/avatar.css");
+@import url("css/alert.css");
+@import url("css/badge.css");
 
 
 :root{
@@ -22,9 +24,10 @@
   }
   
 
-  h2{
+  h2,h4{
     color: var(--secondary-color);
   }
+
   .header {
     background-color: var(--primary-color);
     padding: 1rem 1rem;
