--- a/app.css
+++ b/app.css
@@ -1,6 +1,7 @@
 
 @import url("css/avatar.css");
-
+@import url("css/button.css");
+@import url("css/card.css");
 
 :root{
     --primary-color: rgb(81, 97, 116);
