--- a/app.css
+++ b/app.css
@@ -2,6 +2,8 @@
 @import url("css/avatar.css");
 @import url("css/alert.css");
 @import url("css/badge.css");
+@import url("css/button.css");
+@import url("css/card.css");
 
 
 :root{
