--- a/app.css
+++ b/app.css
@@ -4,6 +4,8 @@
 @import url("css/badge.css");
 @import url("css/button.css");
 @import url("css/card.css");
+@import url("css/image.css");
+@import url("css/input.css");
 
 
 :root{
