--- a/app.css
+++ b/app.css
@@ -6,12 +6,14 @@
 @import url("css/card.css");
 @import url("css/image.css");
 @import url("css/input.css");
+@import url("css/text.css");
+@import url("css/list.css");
 
 
 :root{
     --primary-color: rgb(81, 97, 116);
     --secondary-color:white;
-    --cover-color:rgb(224, 222, 222);
+    --cover-color:#c7dde6;
 }
 
 
@@ -24,7 +26,7 @@
   body {
     font-family: Arial;
     margin: 0;
-    background-image: linear-gradient(#818da7, rgb(245, 173, 173));
+    background-image: linear-gradient(#818da7, rgba(229, 180, 151, 0.986));
   }
   
 
@@ -51,7 +53,7 @@
   .side {
     flex: 30%;
     padding: 20px;
-    background-image: linear-gradient(#818da7, rgb(238, 224, 161));
+    background-image: linear-gradient(#818da7, rgb(167, 232, 243));
   }
   
   .main {
