--- a/app.css
+++ b/app.css
@@ -6,6 +6,9 @@
 @import url("css/card.css");
 @import url("css/image.css");
 @import url("css/input.css");
+@import url("css/navbar.css");
+@import url("css/modal.css");
+@import url("css/rating.css");
 
 
 :root{
