--- a/app.css
+++ b/app.css
@@ -6,6 +6,8 @@
 @import url("css/card.css");
 @import url("css/image.css");
 @import url("css/input.css");
+@import url("css/notify.css");
+@import url("css/grid.css");
 
 
 :root{
