--- a/css/navbar.css
+++ b/css/navbar.css
@@ -3,7 +3,7 @@
     margin: 0;
     padding: 0;
     overflow: hidden;
-    background-color: #333;
+    background-color: var(--primary-color);
   }
   
   .lii {
@@ -12,12 +12,12 @@
   
   li a {
     display: block;
-    color: white;
+    color: var(--secondary-color);
     text-align: center;
     padding: 14px 16px;
     text-decoration: none;
   }
   
   li a:hover {
-    background-color: #111;
+    background-color: var(--blue-color);
   }
