--- a/css/alert.css
+++ b/css/alert.css
@@ -25,7 +25,7 @@
   
   .closebtn {
     margin-left: 5rem;
-    color: white;
+    color: var(--secondary-color);
     font-weight: bold;
     float: right;
     font-size: 1.5rem;
@@ -34,5 +34,5 @@
   }
   
   .closebtn:hover {
-    color: black;
+    color: var(--dark-color);
   }
