--- a/css/card.css
+++ b/css/card.css
@@ -1,12 +1,12 @@
 .card {
     display: flex;
     flex-direction: column;
-    border: 1px solid black;
+    border: 1px solid  var(--black-color);
     border-radius: 1rem;
     overflow: hidden;
     max-width: 30rem;
     margin-bottom: 2rem;
-    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+    box-shadow: 0 4px 8px 0  var(--primary-color);
 
   }
   
@@ -16,7 +16,7 @@
       justify-content: center;
       align-items: center;
       padding: 2rem;
-      background-color: #c7dde6;
+      background-color:  var(--cover-color);
     }
   
     .card__description2 {
@@ -34,8 +34,8 @@
       font-size: 1rem;
       font-weight: 700;
       padding: 0.5rem 1rem;
-      border-top: 1px solid #D7DBDD;
-      background-color: #EEF3F5;
+      border-top: 1px solid  var(--cover-color);
+      background-color:  var(--cover-color);
     }
     .card-tag2 {
         text-align: center;
@@ -43,8 +43,7 @@
         font-size: 1rem;
         font-weight: 700;
         padding: 0.5rem 0.5rem 0rem ;
-       
-        background-color: #7ed0f0;
+        background-color:  var(--blue-color);
       }
 
   
@@ -57,23 +56,22 @@
     width: max-content;
   }
   .badge-status {
-    border: thin solid white;
+    border: thin solid  var(--secondary-color);;
     border-radius: 50%;
     bottom: 0;
     height: 1.3rem;
     position: absolute;
     right: 5%;
-    
     width: 1.3rem;
   }
 
   .badge-status1{
-    background-color: rgb(123, 228, 102);
+    background-color:  var(--green-color);
   }
 
   .closebtn {
     margin-left: 5rem;
-    color: rgb(245, 100, 100);
+    color:  var(--red-color);
     font-weight: bold;
     float: right;
     font-size: 1.5rem;
@@ -82,7 +80,7 @@
   }
   
   .closebtn:hover {
-    color: black;
+    color:  var(--dark-color);
   }
 
 
@@ -93,7 +91,7 @@ body{
   a{
       text-decoration: none;
       font-size: 1rem;
-      color: white;
+      color:  var(--secondary-color);
   }
   img{
       border-radius: 4px;
@@ -102,7 +100,7 @@ body{
       padding: 16px;
       position: relative;
       border-radius: 10px;
-      background-color: white;
+      background-color: var(--secondary-color);
       display: grid;
       width:200px;
   }
@@ -113,7 +111,7 @@ body{
       width: 100%;
       height: 100%;
       padding: 1rem;
-      color: white;
+      color: var(--secondary-color);
       font-size: 0.8rem;
       box-sizing: border-box;
   }
