--- a/css/grid.css
+++ b/css/grid.css
@@ -1,12 +1,12 @@
 .grid-container {
     display: grid;
     gap: 10px;
-    background-color: #2196F3;
+    background-color: var(--blue-color);
     padding: 10px;
   }
   
   .grid-item {
-    background-color: rgba(255, 255, 255, 0.8);
+    background-color: var(--cover-color);
     text-align: center;
     padding: 20px;
     font-size: 30px;
