--- a/css/modal.css
+++ b/css/modal.css
@@ -8,9 +8,9 @@
   }
   
   .modal-content {
-    background-color: #fefefe;
+    background-color: var(--cover-color);
     margin: auto;
     padding: 20px;
-    border: 1px solid #888;
+    border: 1px solid var(--dark-color);
     width: 80%;
   }
