--- a/css/notify.css
+++ b/css/notify.css
@@ -1,6 +1,6 @@
 .notification {
-    background-color: #555;
-    color: white;
+    background-color: var(--primary-color);
+    color: var(--secondary-color);
     text-decoration: none;
     padding: 15px 26px;
     position: relative;
@@ -9,7 +9,7 @@
   }
   
   .notification:hover {
-    background: rgb(119, 117, 117);
+    background: var(--secondary-color);
   }
   
   .notification .badge {
@@ -18,6 +18,6 @@
     right: -10px;
     padding: 5px 10px;
     border-radius: 50%;
-    background-color: red;
-    color: white;
+    background-color: var(--red-color);
+    color: var(--secondary-color);
   }
