refactor: change in color of stacked list

--- a/css/list.css
+++ b/css/list.css
@@ -1,5 +1,5 @@
 .list{
-    background-color: var(--red-color);
+    background-color: var(--blue-color);
     list-style-type: none;
     margin: 0.5rem;
     padding: 0.2rem;
